# TurtleGL

./: .gitignore  CMakeLists.txt  MQuad.cpp  README.org  Sources.txt  reggaefile.d
assets/: planets.json
assets/objects/: cube.mtl  cube_green_phong_12_tris_QUADS.mtl  skybox.mtl  sphere_blue_blinn_760_tris_QUADS.mtl  triangle.fbx
assets/objects/plane/: plane.fbx
assets/objects/planets/: earth.mtl
assets/shaders/: base.frag  base.geom  base.vert  blur.comp  deferred.frag  deferred.vert  final.frag  final.vert  gaussian.frag  light.frag  light.vert  particles.frag  particles.vert  shadowmap.frag  shadowmap.vert  skybox.frag  skybox.vert
src/: engine.cpp  engine.hpp  main.cpp  mesh.cpp  mesh.hpp  scopeexit.cpp  scopeexit.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/entity/: MapQuad.cpp  MapQuad.hpp  assimpentity.cpp  assimpentity.hpp  box.cpp  box.hpp  duck.cpp  duck.hpp  earth.cpp  earth.hpp  entity.cpp  entity.hpp  jeep.cpp  jeep.hpp  mapquad.cpp  mapquad.hpp  particles.cpp  particles.hpp  plane.cpp  plane.hpp  planetsystem.cpp  planetsystem.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
src/gl/: framebuffer.cpp  framebuffer.hpp  gbuffer.cpp  gbuffer.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/io/: texturemanager.cpp  texturemanager.hpp
src/lib/: MQuad.hpp  MapTools.h  imgui_impl_sdl_gl3.cpp  json.hpp
